# TracingRAG

./: .env.example  .env.test  .gitignore  .trivyignore  DESIGN.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  763608f4df3d_add_unique_constraint_topic_version.py  c8dd9ef3ac05_add_is_active_column.py
docs/: API_GUIDE.md  AUTOMATIC_PROMOTION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOMAIN_SPECIFIC_FEATURES.md  ENHANCEMENTS.md  FAQ.md  IMPLEMENTATION_ROADMAP.md  MEMORY_MODEL_CLARIFICATION.md  PHASE7_GUIDE.md  QUICK_START.md  USE_CASES.md
examples/: 01_project_memory.py  02_npc_simulation.py  03_novel_writing.py  04_research_lab_complex.py  05_startup_evolution_complex.py  06_version_bound_relationships.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.example.yaml  service.yaml
monitoring/: prometheus.yml
scripts/: backup_neo4j.py  cleanup_all_data.py  init_neo4j.py  init_qdrant.py  manage_snapshots.py  restore_neo4j.py  verify_setup.py
tests/: conftest.py  test_agents.py  test_api.py  test_cache.py  test_database.py  test_embedding.py  test_graph.py  test_promotion.py  test_rag.py  test_retrieval.py  test_storage_imports.py
tracingrag/: __init__.py  client.py  config.py  types.py
tracingrag/agents/: __init__.py  iterative_query_agent.py  memory_manager.py  models.py  query_planner.py  service.py  tools.py
tracingrag/api/: __init__.py  main.py  schemas.py  security.py
tracingrag/core/: __init__.py
tracingrag/core/models/: __init__.py  graph.py  memory.py  promotion.py  rag.py
tracingrag/services/: __init__.py  cache.py  cascading_evolution.py  consolidation.py  context.py  embedding.py  graph.py  llm.py  logging.py  memory.py  metrics.py  promotion.py  query_analyzer.py  rag.py  relationship_manager.py  retrieval.py
tracingrag/storage/: __init__.py  database.py  models.py  neo4j_client.py  neo4j_snapshot.py  qdrant.py  redis_client.py
tracingrag/utils/: json_utils.py  logger.py
