[tool.poetry]
name = "tracingrag"
version = "0.2.0"
description = "Temporal graph-based RAG system combining evolution tracking, graph relationships, and intelligent retrieval for domain-agnostic knowledge management"
authors = ["JasonXuDeveloper <jasonxudeveloper@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "tracingrag"}]

[tool.poetry.dependencies]
python = "^3.11"  # Python 3.14+ requires C compiler for greenlet (no pre-built wheels yet)
# API Framework
fastapi = "^0.121.0"
starlette = "^0.49.0"  # Pin to latest compatible version to fix CVE-2025-54121, CVE-2025-62727
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"

# Vector Database
qdrant-client = "^1.12.0"

# Graph Database
neo4j = "^5.26.0"

# Database
sqlalchemy = "^2.0.36"
greenlet = "^3.0.0"  # Required for SQLAlchemy async support
asyncpg = "^0.30.0"
aiosqlite = "^0.20.0"  # For SQLite async support (testing)
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"

# Caching
redis = {extras = ["hiredis"], version = "^7.0.1"}

# Embeddings
sentence-transformers = "^3.3.1"
torch = "^2.5.1"

# LLM Integration
openai = "^1.54.5"
langchain = "^0.3.7"
langchain-openai = "^0.2.9"
langgraph = "^1.0.0"  # Updated to fix CVE-2025-64439 in langgraph-checkpoint
langgraph-checkpoint = "^3.0.0"  # Pin to 3.0+ to fix CVE-2025-64439 RCE vulnerability
langchain-community = "^0.3.7"

# Utilities
python-dotenv = "^1.0.1"
pydantic-core = "^2.27.0"
httpx = "^0.27.2"
tenacity = "^9.0.0"
structlog = "^24.4.0"

# Security
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Monitoring
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
aiosqlite = "^0.20.0"

# Linting and Formatting
ruff = "^0.7.4"
mypy = "^1.13.0"

# Type stubs
types-python-dateutil = "^2.9.0"

# Debugging
ipython = "^8.29.0"
ipdb = "^0.13.13"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise without from inside except (stylistic)
    "B017",  # pytest.raises(Exception) is fine for tests
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tracingrag/api/main.py" = ["F811"]  # Intentional function redefinition for different scopes
"tracingrag/storage/models.py" = ["E402"]  # Class definition before imports is intentional
"tracingrag/services/consolidation.py" = ["F841"]  # Unused variables for clarity
"tracingrag/services/cache.py" = ["UP038"]  # isinstance with tuple is more readable
"tracingrag/services/context.py" = ["C401"]  # Generator comprehension is intentional
"tracingrag/agents/query_planner.py" = ["B007"]  # Loop variable naming is intentional

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "sentence_transformers.*",
    "neo4j.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=tracingrag",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
